# Usbip-Flying-Mouse

./: .gitmodules  README-zh.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/yunsmall/flyingmouse/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  flyingmouse_jni.cpp  vcpkg.json
app/src/main/java/com/yunsmall/flyingmouse/: FlyingMouseNative.kt  FlyingMouseService.kt  MainActivity.kt
app/src/main/java/com/yunsmall/flyingmouse/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/yunsmall/flyingmouse/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
